; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/arm/extr_pmap-v4.c_pmap_copy_pages.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/arm/extr_pmap-v4.c_pmap_copy_pages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGE_SHIFT = common dso_local global i64 0, align 8
@PAGE_MASK = common dso_local global i64 0, align 8
@PAGE_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pmap_copy_pages(i32* %0, i64 %1, i32* %2, i64 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32* %2, i32** %8, align 8
  store i64 %3, i64* %9, align 8
  store i32 %4, i32* %10, align 4
  %16 = call i32 (...) @cpu_dcache_wbinv_all()
  %17 = call i32 (...) @cpu_l2cache_wbinv_all()
  br label %18

18:                                               ; preds = %21, %5
  %19 = load i32, i32* %10, align 4
  %20 = icmp sgt i32 %19, 0
  br i1 %20, label %21, label %69

21:                                               ; preds = %18
  %22 = load i32*, i32** %6, align 8
  %23 = load i64, i64* %7, align 8
  %24 = load i64, i64* @PAGE_SHIFT, align 8
  %25 = lshr i64 %23, %24
  %26 = getelementptr inbounds i32, i32* %22, i64 %25
  %27 = load i32, i32* %26, align 4
  store i32 %27, i32* %11, align 4
  %28 = load i64, i64* %7, align 8
  %29 = load i64, i64* @PAGE_MASK, align 8
  %30 = and i64 %28, %29
  store i64 %30, i64* %13, align 8
  %31 = load i32, i32* %10, align 4
  %32 = load i64, i64* @PAGE_SIZE, align 8
  %33 = load i64, i64* %13, align 8
  %34 = sub i64 %32, %33
  %35 = call i32 @min(i32 %31, i64 %34)
  store i32 %35, i32* %15, align 4
  %36 = load i32*, i32** %8, align 8
  %37 = load i64, i64* %9, align 8
  %38 = load i64, i64* @PAGE_SHIFT, align 8
  %39 = lshr i64 %37, %38
  %40 = getelementptr inbounds i32, i32* %36, i64 %39
  %41 = load i32, i32* %40, align 4
  store i32 %41, i32* %12, align 4
  %42 = load i64, i64* %9, align 8
  %43 = load i64, i64* @PAGE_MASK, align 8
  %44 = and i64 %42, %43
  store i64 %44, i64* %14, align 8
  %45 = load i32, i32* %15, align 4
  %46 = load i64, i64* @PAGE_SIZE, align 8
  %47 = load i64, i64* %14, align 8
  %48 = sub i64 %46, %47
  %49 = call i32 @min(i32 %45, i64 %48)
  store i32 %49, i32* %15, align 4
  %50 = load i32, i32* %11, align 4
  %51 = call i32 @VM_PAGE_TO_PHYS(i32 %50)
  %52 = load i64, i64* %13, align 8
  %53 = load i32, i32* %12, align 4
  %54 = call i32 @VM_PAGE_TO_PHYS(i32 %53)
  %55 = load i64, i64* %14, align 8
  %56 = load i32, i32* %15, align 4
  %57 = call i32 @pmap_copy_page_offs_generic(i32 %51, i64 %52, i32 %54, i64 %55, i32 %56)
  %58 = load i32, i32* %15, align 4
  %59 = load i32, i32* %10, align 4
  %60 = sub nsw i32 %59, %58
  store i32 %60, i32* %10, align 4
  %61 = load i32, i32* %15, align 4
  %62 = sext i32 %61 to i64
  %63 = load i64, i64* %7, align 8
  %64 = add i64 %63, %62
  store i64 %64, i64* %7, align 8
  %65 = load i32, i32* %15, align 4
  %66 = sext i32 %65 to i64
  %67 = load i64, i64* %9, align 8
  %68 = add i64 %67, %66
  store i64 %68, i64* %9, align 8
  br label %18

69:                                               ; preds = %18
  ret void
}

declare dso_local i32 @cpu_dcache_wbinv_all(...) #1

declare dso_local i32 @cpu_l2cache_wbinv_all(...) #1

declare dso_local i32 @min(i32, i64) #1

declare dso_local i32 @pmap_copy_page_offs_generic(i32, i64, i32, i64, i32) #1

declare dso_local i32 @VM_PAGE_TO_PHYS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
